Upgrade to Java 21 (#1100)
* Upgrade to Java 21
* Upgrade to Spring 6, Spring Batch 5, Spring Boot 3
* Removed the Darwin pipeline
* Removed the Gene/GDD pipeline 

Co-authored-by: Manda Wilson <1458628+mandawilson@users.noreply.github.com>
Co-authored-by: Robert Sheridan <7747489+sheridancbio@users.noreply.github.com>